--- a/src/output.css
+++ b/src/output.css
@@ -30,7 +30,6 @@
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
-    --color-purple-900: oklch(38.1% 0.176 304.987);
     --color-pink-500: oklch(65.6% 0.241 354.308);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
@@ -44,6 +43,7 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-2xl: 42rem;
+    --container-4xl: 56rem;
     --container-6xl: 72rem;
     --container-7xl: 80rem;
     --text-xs: 0.75rem;
@@ -65,14 +65,12 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
-    --tracking-wide: 0.025em;
     --leading-relaxed: 1.625;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
-    --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --animate-bounce: bounce 1s infinite;
     --blur-md: 12px;
@@ -258,47 +256,14 @@
   .top-2\/4 {
     top: calc(2/4 * 100%);
   }
-  .top-3 {
-    top: calc(var(--spacing) * 3);
-  }
-  .top-3\/4 {
-    top: calc(3/4 * 100%);
-  }
-  .top-4 {
-    top: calc(var(--spacing) * 4);
-  }
-  .top-4\/5 {
-    top: calc(4/5 * 100%);
-  }
-  .top-10 {
-    top: calc(var(--spacing) * 10);
-  }
   .right-2 {
     right: calc(var(--spacing) * 2);
   }
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
-  .-bottom-0 {
-    bottom: calc(var(--spacing) * -0);
-  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
-  }
-  .bottom-0\.5 {
-    bottom: calc(var(--spacing) * 0.5);
-  }
-  .bottom-1 {
-    bottom: calc(var(--spacing) * 1);
-  }
-  .bottom-2 {
-    bottom: calc(var(--spacing) * 2);
-  }
-  .bottom-5 {
-    bottom: calc(var(--spacing) * 5);
-  }
-  .bottom-10 {
-    bottom: calc(var(--spacing) * 10);
   }
   .left-1 {
     left: calc(var(--spacing) * 1);
@@ -329,6 +294,24 @@
   }
   .row-start-2 {
     grid-row-start: 2;
+  }
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
   }
   .m-0 {
     margin: calc(var(--spacing) * 0);
@@ -459,12 +442,6 @@
   .table {
     display: table;
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
-  .h-2\/4 {
-    height: calc(2/4 * 100%);
-  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
@@ -473,9 +450,6 @@
   }
   .h-4 {
     height: calc(var(--spacing) * 4);
-  }
-  .h-4\/5 {
-    height: calc(4/5 * 100%);
   }
   .h-10 {
     height: calc(var(--spacing) * 10);
@@ -504,11 +478,8 @@
   .h-150 {
     height: calc(var(--spacing) * 150);
   }
-  .h-160 {
-    height: calc(var(--spacing) * 160);
-  }
-  .h-auto {
-    height: auto;
+  .h-250 {
+    height: calc(var(--spacing) * 250);
   }
   .h-dvh {
     height: 100dvh;
@@ -519,35 +490,11 @@
   .h-screen {
     height: 100vh;
   }
-  .h-svh {
-    height: 100svh;
-  }
   .min-h-2 {
     min-height: calc(var(--spacing) * 2);
   }
   .min-h-2\/4 {
     min-height: calc(2/4 * 100%);
-  }
-  .min-h-3 {
-    min-height: calc(var(--spacing) * 3);
-  }
-  .min-h-3\/4 {
-    min-height: calc(3/4 * 100%);
-  }
-  .min-h-5 {
-    min-height: calc(var(--spacing) * 5);
-  }
-  .min-h-5\/6 {
-    min-height: calc(5/6 * 100%);
-  }
-  .min-h-11 {
-    min-height: calc(var(--spacing) * 11);
-  }
-  .min-h-11\/12 {
-    min-height: calc(11/12 * 100%);
-  }
-  .min-h-60 {
-    min-height: calc(var(--spacing) * 60);
   }
   .min-h-dvh {
     min-height: 100dvh;
@@ -567,14 +514,14 @@
   .w-3\/4 {
     width: calc(3/4 * 100%);
   }
+  .w-3\/5 {
+    width: calc(3/5 * 100%);
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
-  }
-  .w-28 {
-    width: calc(var(--spacing) * 28);
   }
   .w-32 {
     width: calc(var(--spacing) * 32);
@@ -600,23 +547,26 @@
   .max-w-2xl {
     max-width: var(--container-2xl);
   }
+  .max-w-4xl {
+    max-width: var(--container-4xl);
+  }
   .max-w-6xl {
     max-width: var(--container-6xl);
   }
   .max-w-7xl {
     max-width: var(--container-7xl);
   }
-  .max-w-dvh {
-    max-width: 100dvh;
-  }
-  .max-w-full {
-    max-width: 100%;
+  .max-w-fit {
+    max-width: fit-content;
   }
   .min-w-\[90\%\] {
     min-width: 90%;
   }
   .flex-1 {
     flex: 1;
+  }
+  .flex-none {
+    flex: none;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -671,17 +621,77 @@
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .grid-cols-\[1\.5fr_\.9fr\] {
     grid-template-columns: 1.5fr .9fr;
   }
+  .grid-cols-\[1fr\,1fr\,1fr\,1fr\] {
+    grid-template-columns: 1fr,1fr,1fr,1fr;
+  }
+  .grid-cols-\[1fr\,1fr\,1fr\,fr\] {
+    grid-template-columns: 1fr,1fr,1fr,fr;
+  }
+  .grid-cols-\[1fr\,1fr\,11fr\,1fr\] {
+    grid-template-columns: 1fr,1fr,11fr,1fr;
+  }
+  .grid-cols-\[1fr_1fr_1fr_1fr\] {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .grid-cols-\[repeat\(4\)\,1fr\] {
+    grid-template-columns: repeat(4),1fr;
+  }
+  .grid-cols-\[repeat\(4\)_1fr\] {
+    grid-template-columns: repeat(4) 1fr;
+  }
+  .grid-cols-\[repeat\(4\,1fr\)\] {
+    grid-template-columns: repeat(4,1fr);
+  }
+  .grid-cols-\[repeat\(4\,minmax\(40px\,1fr\)\)\] {
+    grid-template-columns: repeat(4,minmax(40px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fill\,minmax\(100px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fill\,minmax\(200px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fill\,minmax\(300px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fit\,minmax\(40px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fit,minmax(40px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fit\,minmax\(40px_1fr\)\)\] {
+    grid-template-columns: repeat(auto-fit,minmax(40px 1fr));
+  }
+  .grid-cols-\[repeat\(auto-fit\,minmax\(100px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+  }
   .grid-cols-\[repeat\(auto-fit\,minmax\(220px\,1fr\)\)\] {
     grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fit_minmax\(40px_1fr\)\)\] {
+    grid-template-columns: repeat(auto-fit minmax(40px 1fr));
+  }
+  .grid-cols-\[repeat\(auto-fll\,minmax\(40px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fll,minmax(40px,1fr));
+  }
+  .grid-cols-\[repeat\(auto-fll\,minmax\(40px_1fr\)\)\] {
+    grid-template-columns: repeat(auto-fll,minmax(40px 1fr));
+  }
+  .grid-cols-\[repeat\(auto-fll\,minmax\(100px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fll,minmax(100px,1fr));
   }
   .flex-col {
     flex-direction: column;
   }
   .flex-row {
     flex-direction: row;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .items-center {
     align-items: center;
@@ -774,12 +784,6 @@
   }
   .overflow-hidden {
     overflow: hidden;
-  }
-  .overflow-visible {
-    overflow: visible;
-  }
-  .overflow-y-scroll {
-    overflow-y: scroll;
   }
   .rounded {
     border-radius: 0.25rem;
@@ -1041,9 +1045,6 @@
   .text-wrap {
     text-wrap: wrap;
   }
-  .overflow-ellipsis {
-    text-overflow: ellipsis;
-  }
   .text-black {
     color: var(--color-black);
   }
@@ -1267,13 +1268,6 @@
       }
     }
   }
-  .hover\:bg-green-400 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-green-400);
-      }
-    }
-  }
   .hover\:bg-green-600 {
     &:hover {
       @media (hover: hover) {
@@ -1355,6 +1349,16 @@
       outline-style: none;
     }
   }
+  .sm\:mx-10 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .sm\:h-dvh {
+    @media (width >= 40rem) {
+      height: 100dvh;
+    }
+  }
   .sm\:min-w-\[48\%\] {
     @media (width >= 40rem) {
       min-width: 48%;
@@ -1368,11 +1372,6 @@
   .sm\:grid-cols-2 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
-  .sm\:text-left {
-    @media (width >= 40rem) {
-      text-align: left;
     }
   }
   .md\:col-span-1 {
@@ -1415,16 +1414,6 @@
       display: none;
     }
   }
-  .md\:h-3\/4 {
-    @media (width >= 48rem) {
-      height: calc(3/4 * 100%);
-    }
-  }
-  .md\:h-4\/5 {
-    @media (width >= 48rem) {
-      height: calc(4/5 * 100%);
-    }
-  }
   .md\:h-40 {
     @media (width >= 48rem) {
       height: calc(var(--spacing) * 40);
@@ -1435,19 +1424,9 @@
       height: calc(var(--spacing) * 64);
     }
   }
-  .md\:h-80 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 80);
-    }
-  }
   .md\:h-96 {
     @media (width >= 48rem) {
       height: calc(var(--spacing) * 96);
-    }
-  }
-  .md\:h-auto {
-    @media (width >= 48rem) {
-      height: auto;
     }
   }
   .md\:h-dvh {
@@ -1478,6 +1457,11 @@
   .md\:grid-cols-3 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .md\:grid-cols-4 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
   .md\:grid-cols-5 {
